Removed default header/footer from base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
   <body>
     <div id="header">
-      <a id="logo" href="/">Nonrel-testapp</a>
+      <a id="logo" href="/">Health Marketplace</a>
     </div>
 
     <div class="columns">
@@ -44,7 +44,6 @@
     </div>
 
     <div id="footer">
-      <p>Powered by <a href="https://github.com/django-nonrel">Django-nonrel</a></p>
     </div>
 
     {% block js %}
